<resources>
    <string name="app_name">Keep it Silent</string>


    <string name="step_1">STEP 1: Grant the required permissions to application</string>
    <string name="step_1_done">All Required permissions granted.</string>

    <string name="read_calls">Read Calls</string>
    <string name="audio">Audio</string>
    <string name="notifications">Notifications</string>

    <string name="permission_granted">Already granted</string>


    <string name="btn_text">You must give both permissions to enable this button</string>

    <string name="btn_text_after_perm">Put your phone in silent and make three test calls to check its working</string>

</resources>
