<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.junaidaziz.keepitsilent.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_1"
            android:id="@+id/step_1_textview"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:padding="10dp"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/read_calls"
                android:layout_weight="1"
                android:id="@+id/read_calls_permission"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/audio"
                android:id="@+id/audio_permission_Btn"
                android:layout_weight="1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/notifications"
                android:id="@+id/notification_Btn"
                android:layout_weight="1"/>

        </LinearLayout>


        <!--STEP TWO-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_text"
                android:gravity="center"
                android:layout_margin="16dp"
                android:id="@+id/btn_text"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Test Call!"
                android:id="@+id/soundBtn"
                android:layout_marginTop="10dp"/>



        </LinearLayout>




    </LinearLayout>











</LinearLayout>
